--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,6 +4,24 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+common = { path = "../common" }
+
+tokio = { workspace = true }
+
+tokio-util = "0.7"
+
+dashmap = "5.5"
+
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+
+anyhow = { workspace = true }
+
+clap = { version = "4.4", features = ["derive"] }
+
+prost = { workspace = true }
+bytes = { workspace = true }
 
 [lib]
-path = "src/server.rs"
+name = "server"
+path = "src/lib.rs"
