--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -3,6 +3,10 @@ name = "server"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "server"
+path = "src/main.rs"
+
 [dependencies]
 common = { path = "../common" }
 
