refactor(ci): simplify integration test command by removing redundant test specification
Signed-off-by: vibhatsu <maulikbarot2915@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,7 +130,7 @@ jobs:
         run: cargo build --all-features
       
       - name: Run integration tests
-        run: cargo test --test '*' --all-features -- --test-threads=1
+        run: cargo test --all-features -- --test-threads=1
       
       - name: Start server and run e2e tests
         run: |
