--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -12,11 +12,14 @@ jobs:
   audit:
     name: Cargo Audit
     runs-on:  ubuntu-latest
+    permissions:
+      contents: read
+      issues: write
     steps: 
       - uses: actions/checkout@v4
       
       - name: Run cargo-audit
-        uses: rustsec/audit-check@v1
+        uses: rustsec/audit-check@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
   
