--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -15,6 +15,7 @@ jobs:
     permissions:
       contents: read
       issues: write
+      pull_requests: write
     steps: 
       - uses: actions/checkout@v4
       
