--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -21,6 +21,7 @@ jobs:
       
       - name: Run cargo-audit
         uses: rustsec/audit-check@v2
+        if: github.event.pull_request.head.repo.full_name == github.repository
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
   
