--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -7,24 +7,23 @@ on:
     paths:
       - '**/Cargo.toml'
       - '**/Cargo.lock'
+  pull_request:
 
 jobs:
   audit:
-    name: Cargo Audit
-    runs-on:  ubuntu-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read
-      issues: write
-      pull_requests: write
-    steps: 
+
+    steps:
       - uses: actions/checkout@v4
-      
+
       - name: Run cargo-audit
         uses: rustsec/audit-check@v2
-        if: github.event.pull_request.head.repo.full_name == github.repository
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-  
+          deny: vulnerabilities
+
   dependency-review:
     name: Dependency Review
     runs-on: ubuntu-latest
