refactor(security): remove redundant security audit job and clean up permissions
Signed-off-by: vibhatsu <maulikbarot2915@gmail.com>

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -7,30 +7,22 @@ on:
     paths:
       - '**/Cargo.toml'
       - '**/Cargo.lock'
+  pull_request:
 
 jobs:
   audit:
-    name: Cargo Audit
-    runs-on:  ubuntu-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read
-      issues: write
-      pull_requests: write
-    steps: 
-      - uses: actions/checkout@v4
-      
-      - name: Run cargo-audit
-        uses: rustsec/audit-check@v2
-        if: github.event.pull_request.head.repo.full_name == github.repository
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-  
-  dependency-review:
-    name: Dependency Review
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+
     steps:
       - uses: actions/checkout@v4
-      
-      - name:  Dependency Review
-        uses: actions/dependency-review-action@v3
+
+      - name: Generate Cargo.lock
+        run: cargo generate-lockfile
+
+      - name: Run cargo-audit
+        uses: rustsec/audit-check@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
