--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   coverage:
     name: Generate Coverage Report
+    if: github.actor != 'dependabot[bot]'
     runs-on:  ubuntu-latest
     steps: 
       - uses: actions/checkout@v4
