feat(server): add support for upload request
Signed-off-by: vibhatsu <maulikbarot2915@gmail.com>

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -26,6 +26,9 @@ clap = { version = "4.4", features = ["derive"] }
 prost = { workspace = true }
 bytes = { workspace = true }
 
+[dev-dependencies]
+async-trait = "0.1"
+
 [lib]
 name = "server"
 path = "src/lib.rs"
